--- a/index.html
+++ b/index.html
@@ -54,8 +54,13 @@
   | <a href="https://scholar.google.com/citations?user=Sh1yq5QAAAAJ">Google Scholar</a>
 ]
 
-<ul>
-
+<ul>  
+  <li>
+    <a href=papers/nsdi2023-netcov.pdf>Test coverage metrics for network configurations</a>
+    <br> Xieyang Xu, Weixin Deng, Ryan Beckett, Ratul Mahajan, David Walker,
+    <br>
+    <i>NSDI, 2023</i>  
+  </li>
   <li>
     <a href=papers/sigcomm2021-yardstick.pdf>Test coverage metrics for the network</a>
     <br> Xieyang Xu, Ryan Beckett, Karthick Jayaraman, Ratul Mahajan, David Walker,
@@ -68,11 +73,6 @@
     <br>
     <i>HotNets, 2020</i>
   
-    <li>
-      <a href=papers/popl2020-shapeshifter.pdf>Abstract interpretation of distributed network control planes</a>
-  <br>Ryan Beckett, Aarti Gupta, Ratul Mahajan, David Walker
-  <br>
-  <i>POPL, 2020</i>    
 </ul>
 
 <p>
