--- a/pubs-bytopic.html
+++ b/pubs-bytopic.html
@@ -23,9 +23,19 @@
 <table style="width: 100%;" cellpadding="2" cellspacing="2">
 <tr><td width=10px><td></tr>
 <tr><td><td>
+<a href=papers/nsdi2023-netcov.pdf><b>Test coverage metrics for network configurations</b></a><br>
+Xieyang Xu, Weixin Deng, Ryan Beckett, Ratul Mahajan, David Walker<br>
+NSDI, 2023<br>
+<a href=https://github.com/UWNetworksLab/netcov>Code and documentation</a><br><br>
+<tr><td><td>
 <a href=papers/sigcomm2021-yardstick.pdf><b>Test coverage metrics for the network</b></a><br>
 Xieyang Xu, Ryan Beckett, Karthick Jayaraman, Ratul Mahajan, David Walker<br>
 SIGCOMM, 2021<br>
+<br>
+<tr><td><td>
+<a href=papers/popl2020-shapeshifter.pdf><b>Abstract interpretation of distributed network control planes</b></a><br>
+Ryan Beckett, Aarti Gupta, Ratul Mahajan, David Walker<br>
+POPL, 2020<br>
 <br>
 <tr><td><td>
 <a href=papers/hotnets2020-zen.pdf><b>A general framework for compositional network modeling</b></a><br>
