--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
   </td>
   <td width=320 style='padding:0in 0in 0in 0in'>
   <p >Ratul Mahajan
-  <br>Associate Professor, <a href=https://www.cs.washington.edu/>UW</a>
-  <br>Co-founder and CEO, <a href=https://www.intentionet.com>Intentionet</a>
-  <br>&lt;ratul [at] ratul [dot] org&gt;
-  <br><a href=https://twitter.com/ratulm>@ratulm</a> | <a href=https://medium.com/@ratul_60608>blog</a>
+  <br>Associate Professor, <a href=https://www.cs.washington.edu/>UW-CSE</a>
+  <br>Co-director, <a href=https://foci.uw.edu/>UW FOCI</a>
+  <br>Amazon Scholar, AWS</a>
+  <br>&lt;ratul@ratul.org&gt;
+  <br><a href=https://twitter.com/ratulm>@ratulm</a>
   </p>
   </td>
  </tr>
@@ -252,7 +253,7 @@ Keynote at HUPS, July 2013
 <p>
 <b>Bio</b>
 <br>
-Ratul Mahajan is an Associate Professor at the <a href=https://www.cs.washington.edu/>University of Washington</a> (Paul G. Allen School of Computer Science) and a Co-founder and CEO of <a href=http://www.intentionet.com>Intentionet</a>, a company that is enabling safe, rapid evolution of computer networks using formal analysis and high-level design approaches. Prior to that, he was a Principal Researcher at <a href=https://www.microsoft.com/en-us/research/>Microsoft Research</a>. He got his PhD at the <a href=https://www.cs.washington.edu/>University of Washington</a> and B.Tech at <a href=http://www.iitd.ac.in/>Indian Institute of Technology, Delhi</a>, both in Computer Science and Engineering.
+Ratul Mahajan is an Associate Professor at the <a href=https://www.cs.washington.edu/>University of Washington</a> (Paul G. Allen School of Computer Science). He is also the co-director of <a href=https://foci.uw.edu>UW FOCI</a> (Future of Cloud Infrastructure) and an Amazon Scholar. Prior to that, he was a Co-founder and CEO of <a href=http://www.intentionet.com>Intentionet</a>, a company that pioneered intent-based networking and network verification,  a Principal Researcher at <a href=https://www.microsoft.com/en-us/research/>Microsoft Research</a>. He got his PhD at the <a href=https://www.cs.washington.edu/>University of Washington</a> and B.Tech at <a href=http://www.iitd.ac.in/>Indian Institute of Technology, Delhi</a>, both in Computer Science and Engineering.
 <p>
 Ratul is a computer systems researcher with a networking focus and has worked on a broad set of topics, including network verification, connected homes, network programming, optical networks, Internet routing and measurements, and mobile systems. He has published over fifty papers in top venues such as SIGCOMM, SOSP, MobiCom, CHI, and PLDI, and many of the technologies that he has helped develop are part of real-world systems at Microsoft and other companies. 
 <p>
