--- a/index.html
+++ b/index.html
@@ -138,6 +138,12 @@ Keynote at HUPS, July 2013
 <li>
 <b>PC member:</b>
 <ul>
+  <li> 2023:
+    <a href=https://www.usenix.org/conference/osdi23>OSDI</a>, 
+  </li>
+  <li> 2022:
+    <a href=https://www.usenix.org/conference/osdi22>OSDI</a>, 
+  </li>
   <li> 2021:
     <a href=https://conferences.sigcomm.org/sigcomm/2021/>SIGCOMM</a>, 
     <a href="http://conferences.sigcomm.org/hotnets/2021/">HotNets</a>, 
@@ -253,7 +259,7 @@ Keynote at HUPS, July 2013
 <p>
 <b>Bio</b>
 <br>
-Ratul Mahajan is an Associate Professor at the <a href=https://www.cs.washington.edu/>University of Washington</a> (Paul G. Allen School of Computer Science). He is also the co-director of <a href=https://foci.uw.edu>UW FOCI</a> (Future of Cloud Infrastructure) and an Amazon Scholar. Prior to that, he was a Co-founder and CEO of <a href=http://www.intentionet.com>Intentionet</a>, a company that pioneered intent-based networking and network verification,  a Principal Researcher at <a href=https://www.microsoft.com/en-us/research/>Microsoft Research</a>. He got his PhD at the <a href=https://www.cs.washington.edu/>University of Washington</a> and B.Tech at <a href=http://www.iitd.ac.in/>Indian Institute of Technology, Delhi</a>, both in Computer Science and Engineering.
+Ratul Mahajan is an Associate Professor at the <a href=https://www.cs.washington.edu/>University of Washington</a> (Paul G. Allen School of Computer Science). He is also the co-director of <a href=https://foci.uw.edu>UW FOCI</a> (Future of Cloud Infrastructure) and an Amazon Scholar. Prior to that, he was a Co-founder and CEO of <a href=http://www.intentionet.com>Intentionet</a>, a company that pioneered intent-based networking and network verification, and a Principal Researcher at <a href=https://www.microsoft.com/en-us/research/>Microsoft Research</a>. He got his PhD at the <a href=https://www.cs.washington.edu/>University of Washington</a> and B.Tech at <a href=http://www.iitd.ac.in/>Indian Institute of Technology, Delhi</a>, both in Computer Science and Engineering.
 <p>
 Ratul is a computer systems researcher with a networking focus and has worked on a broad set of topics, including network verification, connected homes, network programming, optical networks, Internet routing and measurements, and mobile systems. He has published over fifty papers in top venues such as SIGCOMM, SOSP, MobiCom, CHI, and PLDI, and many of the technologies that he has helped develop are part of real-world systems at Microsoft and other companies. 
 <p>
