Add Cisco Research talk; retire old talks

--- a/index.html
+++ b/index.html
@@ -50,30 +50,30 @@
 <li> <a href=https://www.microsoft.com/en-us/research/project/optical-networking/>Optical networking</a>
 </ul>
 
-<p><b>Recent papers</b> [<a href="pubs.html">Complete list</a> 
+<p><b>Recent papers</b> [<a href="pubs.html">Complete list</a>
   | <a href="pubs-bytopic.html">Organized by topic</a>
   | <a href="https://scholar.google.com/citations?user=Sh1yq5QAAAAJ">Google Scholar</a>
 ]
 
-<ul>  
+<ul>
   <li>
     <a href=papers/nsdi2023-netcov.pdf>Test coverage metrics for network configurations</a>
     <br> Xieyang Xu, Weixin Deng, Ryan Beckett, Ratul Mahajan, David Walker,
     <br>
-    <i>NSDI, 2023</i>  
+    <i>NSDI, 2023</i>
   </li>
   <li>
     <a href=papers/sigcomm2021-yardstick.pdf>Test coverage metrics for the network</a>
     <br> Xieyang Xu, Ryan Beckett, Karthick Jayaraman, Ratul Mahajan, David Walker,
     <br>
-    <i>SIGCOMM, 2021</i>  
+    <i>SIGCOMM, 2021</i>
   </li>
   <li>
     <a href=papers/hotnets2020-zen.pdf>A general framework for compositional network modeling</a>
     <br>Ryan Beckett, Ratul Mahajan
     <br>
     <i>HotNets, 2020</i>
-  
+
 </ul>
 
 <p>
@@ -81,45 +81,20 @@
 <ul>
 
 <li>
+<a href=talks/cisco-netcov-apr23.pdf>NetCov: Test coverage for network configurations</a>
+<br>
+At Cisco Research, Apr 2023<br>
+
+<li>
 <a href=talks/future-net-aug2017.pptx>Network Engineers Can Uncross their Fingers by Emulating Hardware and Software Engineers</a> [<a href=https://www.youtube.com/watch?v=LfoCK7Au6to>Watch</a>]
 <br>
 Keynote at <a href=https://www.vmware.com/futurenet>Future:Net</a> 2017<br>
 
 <li>
-<a href=talks/sosr-apr2017.pptx>Network programming for the cloud ERA</a> 
+<a href=talks/sosr-apr2017.pptx>Network programming for the cloud ERA</a>
 <br>
 Keynote at <a href=http://conferences.sigcomm.org/sosr/2017/>ACM SOSR 2017</a> <br>
 
-<li>
-<a href=talks/network-programming-jun2016.pptx>Maslow's hierarchy of network programming and the unmet needs</a> 
-<br>
-Keynote at <a href=http://network-programming.org/>Center for Network Programming</a> Retreat, Jun 2016 <br>
-
-<li>
-<a href=talks/propane-dimacs-jun2016.pptx>Bridging centralized programming and distributed control planes</a> [<a href=https://www.youtube.com/watch?v=AXrhbM2BWGQ>Watch</a>]
-<br>
-NSF <a href=http://dimacs.rutgers.edu/Workshops/SDNAlgorithms/>Algorithms in the Field Workshop</a>, Jun 2016 <br>
-
-
-<li>
-<a href=talks/batfish-dagstuhl-feb2015.pptx>Configuration verification: A missing link toward fully verified networks</a> 
-<br>
-Dagstuhl seminar on Formal Foundations of Networking, Feb 2015 <br>
-
-<li>
-<a href=talks/swan-stanford-may2014.pptx>Software-defined networking: Change is hard</a> [<a href=https://www.youtube.com/watch?v=YgqHTsd247M>Watch</a>]
-<br>
-Stanford, May 2014
-
-<li>
-<a href=talks/swan-ucsd-nov2013.pptx>Software-driven wide area network</a>
-<br>
-Distinguished Lecture Series, UCSD, Nov 2013
-
-<li>
-<a href=talks/homeos-hups-jul2013.pptx>Accelerating innovation in home technology</a>
-<br>
-Keynote at HUPS, July 2013
 
 </ul>
 
@@ -127,26 +102,26 @@ Keynote at HUPS, July 2013
 <b>Professional activities</b>
 <ul>
 <li>
-<b>PC chair:</b> 
-<a href=https://conferences.sigcomm.org/sigcomm/2020/>SIGCOMM 2020</a>, 
-<a href=https://www.usenix.org/conference/nsdi14>NSDI 2014</a>, 
-<a href=http://conferences.sigcomm.org/imc/2012/>IMC 2012</a>, 
-<a href="http://mobiarch11.cs.ucl.ac.uk/">MobiArch 2011</a>, 
-<a href="http://conferences.sigcomm.org/hotnets/2009/">HotNets 2009 </a>, 
+<b>PC chair:</b>
+<a href=https://conferences.sigcomm.org/sigcomm/2020/>SIGCOMM 2020</a>,
+<a href=https://www.usenix.org/conference/nsdi14>NSDI 2014</a>,
+<a href=http://conferences.sigcomm.org/imc/2012/>IMC 2012</a>,
+<a href="http://mobiarch11.cs.ucl.ac.uk/">MobiArch 2011</a>,
+<a href="http://conferences.sigcomm.org/hotnets/2009/">HotNets 2009 </a>,
 <a href="http://netecon-ibc.si.umich.edu/">NetEcon+IBC 2007</a>
 
 <li>
 <b>PC member:</b>
 <ul>
   <li> 2023:
-    <a href=https://www.usenix.org/conference/osdi23>OSDI</a>, 
+    <a href=https://www.usenix.org/conference/osdi23>OSDI</a>,
   </li>
   <li> 2022:
-    <a href=https://www.usenix.org/conference/osdi22>OSDI</a>, 
+    <a href=https://www.usenix.org/conference/osdi22>OSDI</a>,
   </li>
   <li> 2021:
-    <a href=https://conferences.sigcomm.org/sigcomm/2021/>SIGCOMM</a>, 
-    <a href="http://conferences.sigcomm.org/hotnets/2021/">HotNets</a>, 
+    <a href=https://conferences.sigcomm.org/sigcomm/2021/>SIGCOMM</a>,
+    <a href="http://conferences.sigcomm.org/hotnets/2021/">HotNets</a>,
   </li>
 
 <li> 2017:
@@ -159,41 +134,41 @@ Keynote at HUPS, July 2013
 <a href="http://conferences.sigcomm.org/hotnets/2016/">HotNets</a>,
 
 <li> 2015:
-<a href="http://icdcs-2015.cse.ohio-state.edu/">ICDCS</a>, 
+<a href="http://icdcs-2015.cse.ohio-state.edu/">ICDCS</a>,
 <a href="http://conferences.sigcomm.org/imc/2015/">IMC</a>,
-<a href="http://conferences.sigcomm.org/hotnets/2015/">HotNets</a>, 
-<a href="http://opennetsummit.org/sosr/">SOSR</a>, 
+<a href="http://conferences.sigcomm.org/hotnets/2015/">HotNets</a>,
+<a href="http://opennetsummit.org/sosr/">SOSR</a>,
 <a href="http://conferences.sigcomm.org/sigcomm/2015/c2bid.php">C2BID</a>
 
 <li> 2014:
 <a href="https://www.usenix.org/conference/nsdi14">NSDI</a>,
-<a href="http://conferences.sigcomm.org/sigcomm/2014/">SIGCOMM</a>, 
-<a href="http://conferences.sigcomm.org/co-next/2014/">CoNext</a>, 
-<a href="https://sites.google.com/site/2014socc/">SoCC</a>, 
-<a href="http://appanalysis.org/upside/">UPSIDE</a>, 
-<a href="https://www.usenix.org/conference/ons2014">ONS</a>, 
+<a href="http://conferences.sigcomm.org/sigcomm/2014/">SIGCOMM</a>,
+<a href="http://conferences.sigcomm.org/co-next/2014/">CoNext</a>,
+<a href="https://sites.google.com/site/2014socc/">SoCC</a>,
+<a href="http://appanalysis.org/upside/">UPSIDE</a>,
+<a href="https://www.usenix.org/conference/ons2014">ONS</a>,
 <li> 2013:
 <a href="https://www.usenix.org/conference/nsdi13">NSDI</a>,
-<a href="http://conferences.sigcomm.org/hotnets/2013/">HotNets</a>, 
+<a href="http://conferences.sigcomm.org/hotnets/2013/">HotNets</a>,
 <li> 2012:
-<a href="http://conferences.sigcomm.org/sigcomm/2012/">SIGCOMM</a>, 
+<a href="http://conferences.sigcomm.org/sigcomm/2012/">SIGCOMM</a>,
 <a href="http://conferences.sigcomm.org/imc/2012/">IMC</a>,
 <li> 2011:
-<a href="http://conferences.sigcomm.org/sigcomm/2011/">SIGCOMM</a>, 
+<a href="http://conferences.sigcomm.org/sigcomm/2011/">SIGCOMM</a>,
 <a href="http://www.usenix.org/events/nsdi11/index.html">NSDI</a>,
 <a href="http://conferences.sigcomm.org/imc/2011/">IMC</a>,
 <a href="href=http://mobiarch11.cs.ucl.ac.uk">MobiArch</a>
 <a href="http://conferences.sigcomm.org/sigcomm/2011/workshops/HomeNets/">HomeNets</a>,
-<li> 2010: 
-<a href="http://www.sigmetrics.org/sigmetrics2010/">SIGMETRICS</a>, 
-<a href="http://conferences.sigcomm.org/imc/2010/">IMC</a>, 
-<a href="http://conferences.sigcomm.org/co-next/2010/">CoNext</a>, 
-<a href="http://conferences.sigcomm.org/hotnets/2010/">HotNets</a>, 
+<li> 2010:
+<a href="http://www.sigmetrics.org/sigmetrics2010/">SIGMETRICS</a>,
+<a href="http://conferences.sigcomm.org/imc/2010/">IMC</a>,
+<a href="http://conferences.sigcomm.org/co-next/2010/">CoNext</a>,
+<a href="http://conferences.sigcomm.org/hotnets/2010/">HotNets</a>,
 <a href="http://conferences.sigcomm.org/sigcomm/2010/HomeNets.php">HomeNets</a>,
 <a href="http://sites.google.com/site/mobiarch10/">MobiArch</a>
 
 <li> 2009:
-<a href="http://www.acm.org/sigs/sigcomm/sigcomm2009/">SIGCOMM</a>, 
+<a href="http://www.acm.org/sigs/sigcomm/sigcomm2009/">SIGCOMM</a>,
 <a href="http://www.imconf.net/imc-2009/">IMC</a>,
 <a href="http://www.ieee-icnp.org/2009/">ICNP</a>,
 <a href="http://conferences.sigcomm.org/hotnets/2009/">HotNets-VIII </a>,
@@ -203,14 +178,14 @@ Keynote at HUPS, July 2013
 <a href="http://www.aqualab.cs.northwestern.edu/HotACIV/">HotAC</a>,
 <a href="http://cmclab.rice.edu/~winmee/">WinMee</a>
 
-<li> 2008: 
-<a href="http://www.acm.org/sigs/sigcomm/sigcomm2008/">SIGCOMM</a>, 
+<li> 2008:
+<a href="http://www.acm.org/sigs/sigcomm/sigcomm2008/">SIGCOMM</a>,
 <a href="http://www.comsoc.org/confs/infocom/2008/">INFOCOM</a>,
 <a href="http://www.sigcomm.org/sigcomm2008/workshops/netecon/">NetEcon</a>,
 <a href="http://conferences.sigcomm.org/co-next/2008/roads.html">ROADS</a>,
 <a href="http://www.netsec.colostate.edu/gi08/">Global Internet</a>
 
-<li> 2007: 
+<li> 2007:
 <a href="http://pam2007.intel-research.net/">PAM</a>,
 <a href="http://netecon-ibc.si.umich.edu/">NetEcon</a>,
 <a href="http://www.acm.org/sigs/sigcomm/sigcomm2007/">SIGCOMM posters</a>
@@ -261,9 +236,9 @@ Keynote at HUPS, July 2013
 <br>
 Ratul Mahajan is an Associate Professor at the <a href=https://www.cs.washington.edu/>University of Washington</a> (Paul G. Allen School of Computer Science). He is also the co-director of <a href=https://foci.uw.edu>UW FOCI</a> (Future of Cloud Infrastructure) and an Amazon Scholar. Prior to that, he was a Co-founder and CEO of <a href=http://www.intentionet.com>Intentionet</a>, a company that pioneered intent-based networking and network verification, and a Principal Researcher at <a href=https://www.microsoft.com/en-us/research/>Microsoft Research</a>. He got his PhD at the <a href=https://www.cs.washington.edu/>University of Washington</a> and B.Tech at <a href=http://www.iitd.ac.in/>Indian Institute of Technology, Delhi</a>, both in Computer Science and Engineering.
 <p>
-Ratul is a computer systems researcher with a networking focus and has worked on a broad set of topics, including network verification, connected homes, network programming, optical networks, Internet routing and measurements, and mobile systems. He has published over fifty papers in top venues such as SIGCOMM, SOSP, MobiCom, CHI, and PLDI, and many of the technologies that he has helped develop are part of real-world systems at Microsoft and other companies. 
+Ratul is a computer systems researcher with a networking focus and has worked on a broad set of topics, including network verification, connected homes, network programming, optical networks, Internet routing and measurements, and mobile systems. He has published over fifty papers in top venues such as SIGCOMM, SOSP, MobiCom, CHI, and PLDI, and many of the technologies that he has helped develop are part of real-world systems at Microsoft and other companies.
 <p>
-Ratul has been recognized as an ACM Distinguished Scientist, an ACM SIGCOMM Rising Star, and a Microsoft Research Graduate Fellow. His papers have won the ACM SIGCOMM Test-of-Time Award, the IEEE William R. Bennett Prize, the ACM SIGCOMM Best Paper Awards (twice), and the HVC Best Paper Award. 
+Ratul has been recognized as an ACM Distinguished Scientist, an ACM SIGCOMM Rising Star, and a Microsoft Research Graduate Fellow. His papers have won the ACM SIGCOMM Test-of-Time Award, the IEEE William R. Bennett Prize, the ACM SIGCOMM Best Paper Awards (twice), and the HVC Best Paper Award.
 </div>
 
 </body>
