--- a/talks.html
+++ b/talks.html
@@ -1,6 +1,37 @@
 <ul>
 
 <li>
+<a href=talks/network-programming-jun2016.pptx>Maslow's hierarchy of network programming and the unmet needs</a>
+<br>
+Keynote at <a href=http://network-programming.org/>Center for Network Programming</a> Retreat, Jun 2016 <br>
+
+<li>
+<a href=talks/propane-dimacs-jun2016.pptx>Bridging centralized programming and distributed control planes</a> [<a href=https://www.youtube.com/watch?v=AXrhbM2BWGQ>Watch</a>]
+<br>
+NSF <a href=http://dimacs.rutgers.edu/Workshops/SDNAlgorithms/>Algorithms in the Field Workshop</a>, Jun 2016 <br>
+
+
+<li>
+<a href=talks/batfish-dagstuhl-feb2015.pptx>Configuration verification: A missing link toward fully verified networks</a>
+<br>
+Dagstuhl seminar on Formal Foundations of Networking, Feb 2015 <br>
+
+<li>
+<a href=talks/swan-stanford-may2014.pptx>Software-defined networking: Change is hard</a> [<a href=https://www.youtube.com/watch?v=YgqHTsd247M>Watch</a>]
+<br>
+Stanford, May 2014
+
+<li>
+<a href=talks/swan-ucsd-nov2013.pptx>Software-driven wide area network</a>
+<br>
+Distinguished Lecture Series, UCSD, Nov 2013
+
+<li>
+<a href=talks/homeos-hups-jul2013.pptx>Accelerating innovation in home technology</a>
+<br>
+Keynote at HUPS, July 2013
+
+<li>
 <a href=talks/swan-msrc-jul2013.pptx>SWAN: Software-driven wide area network</a>
 <br>
 MSR Cambridge, July 2013
@@ -67,7 +98,7 @@ U Wisconsin, Nov 2009; and Georgia Tech, Oct 2009
 Keynote at <i>WinMee 2009</i>; KAIST [Daejeon, South Korea]; MPI-SWS [Saarbrucken, Germany]
 
 <li>
-<a href=talks/usc2008-clean.pptx>What constitutes a useful experimental result?</a> 
+<a href=talks/usc2008-clean.pptx>What constitutes a useful experimental result?</a>
 <br>
 Panel at <i>USC Invited Workshop on Theory & Practice in Wireless Networks 2008</i>
 
