Add Batfish lessons paper

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <p><b>Recent projects [<a href=projects.html>some past projects</a>]</b>
 <ul>
 <li> <a href=pubs-bytopic.html#protocols>Network verification</a>
-<li> <a href=https://www.microsoft.com/en-us/research/project/optical-networking/>Optical networking</a>
+<li> <a href=https://foci.uw.edu/projects.html>Application networking</a>
 </ul>
 
 <p><b>Recent papers</b> [<a href="pubs.html">Complete list</a>
@@ -57,23 +57,17 @@
 
 <ul>
   <li>
+    <a href=papers/sigcomm2023-batfish-lessons.pdf>Lessons from the evolution of the Batfish configuration analysis tool</a>
+    <br> Matt Brown, Ari Fogel, Daniel Halperin, Victor Heohiardi, Ratul Mahajan, Todd Millstein,
+    <br>
+    <i>SIGCOMM, 2023</i>
+  </li>
+  <li>
     <a href=papers/nsdi2023-netcov.pdf>Test coverage metrics for network configurations</a>
     <br> Xieyang Xu, Weixin Deng, Ryan Beckett, Ratul Mahajan, David Walker,
     <br>
     <i>NSDI, 2023</i>
   </li>
-  <li>
-    <a href=papers/sigcomm2021-yardstick.pdf>Test coverage metrics for the network</a>
-    <br> Xieyang Xu, Ryan Beckett, Karthick Jayaraman, Ratul Mahajan, David Walker,
-    <br>
-    <i>SIGCOMM, 2021</i>
-  </li>
-  <li>
-    <a href=papers/hotnets2020-zen.pdf>A general framework for compositional network modeling</a>
-    <br>Ryan Beckett, Ratul Mahajan
-    <br>
-    <i>HotNets, 2020</i>
-
 </ul>
 
 <p>
