--- a/pubs-bytopic.html
+++ b/pubs-bytopic.html
@@ -23,6 +23,11 @@
 <table style="width: 100%;" cellpadding="2" cellspacing="2">
 <tr><td width=10px><td></tr>
 <tr><td><td>
+<a href=papers/sigcomm2023-batfish-lessons.pdf><b>TLessons from the evolution of the Batfish configuration analysis tool</b></a><br>
+Matt Brown, Ari Fogel, Daniel Halperin, Victor Heohiardi, Ratul Mahajan, Todd Millstein<br>
+SIGCOMM, 2023<br>
+<a href=https://github.com/batfish>Code and documentation</a><br><br>
+<tr><td><td>
 <a href=papers/nsdi2023-netcov.pdf><b>Test coverage metrics for network configurations</b></a><br>
 Xieyang Xu, Weixin Deng, Ryan Beckett, Ratul Mahajan, David Walker<br>
 NSDI, 2023<br>
