Add socc papers

--- a/index.html
+++ b/index.html
@@ -55,16 +55,32 @@
   | <a href="https://scholar.google.com/citations?user=Sh1yq5QAAAAJ">Google Scholar</a>
 ]
 
+
+
+
+
 <ul>
   <li>
+    <a href=papers/socc2023-meshinsight.pdf>Dissecting Overheads of Service Mesh Sidecars</a>
+    <br> Xiangfeng Zhu, Guozhen She, Bowen Xue, Yu Zhang, Yongsu Zhang, Xuan Kelvin Zou, XiongChun Duan, Peng He, Arvind Krishnamurthy, Matthew Lentz, Danyang Zhuo, and Ratul Mahajan
+    <br>
+    <i>SoCC, 2023</i>
+  </li>
+  <li>
+    <a href=papers/socc2023-sia.pdf>Anticipatory Resource Allocation for ML Training</a>
+    <br> Tapan Chugh, Srikanth Kandula, Arvind Krishnamurthy, Ratul Mahajan, and Ishai Menache
+    <br>
+    <i>SoCC, 2023</i>
+  </li>
+  <li>
     <a href=papers/sigcomm2023-batfish-lessons.pdf>Lessons from the evolution of the Batfish configuration analysis tool</a>
-    <br> Matt Brown, Ari Fogel, Daniel Halperin, Victor Heohiardi, Ratul Mahajan, Todd Millstein,
+    <br> Matt Brown, Ari Fogel, Daniel Halperin, Victor Heohiardi, Ratul Mahajan, and Todd Millstein
     <br>
     <i>SIGCOMM, 2023</i>
   </li>
   <li>
     <a href=papers/nsdi2023-netcov.pdf>Test coverage metrics for network configurations</a>
-    <br> Xieyang Xu, Weixin Deng, Ryan Beckett, Ratul Mahajan, David Walker,
+    <br> Xieyang Xu, Weixin Deng, Ryan Beckett, Ratul Mahajan, and David Walker
     <br>
     <i>NSDI, 2023</i>
   </li>
