--- a/pubs-bytopic.html
+++ b/pubs-bytopic.html
@@ -5,6 +5,7 @@
 </head>
 <body bgcolor="#ffffff">
 <ul>
+<li><a href="#appnets">Application networking</a>
 <li><a href="#protocols">Network verification and high-level programming</a>
 <li><a href="#optical">Optical networking</a>
 <li><a href="#sdn">Software-defined networking</a>
@@ -16,6 +17,23 @@
 <li><a href="#incentives">Incentives in networked systems</a>
 <li><a href="#misc">Miscellaneous</a>
 </ul>
+<p><a name=appnets></a>
+
+               <b>Application networking</b>
+
+<table style="width: 100%;" cellpadding="2" cellspacing="2">
+<tr><td width=10px><td></tr>
+<tr><td><td>
+<a href=papers/socc2023-meshinsight.pdf><b>Dissecting Overheads of Service Mesh Sidecars</b></a><br>
+Xiangfeng Zhu, Guozhen She, Bowen Xue, Yu Zhang, Yongsu Zhang, Xuan Kelvin Zou, XiongChun Duan, Peng He, Arvind Krishnamurthy, Matthew Lentz, Danyang Zhuo, Ratul Mahajan<br>
+SoCC, 2023<br>
+<a href=https://github.com/UWNetworksLab/meshinsight>Code and documentation</a><br><br>
+<tr><td><td>
+<a href=papers/socc2023-sia.pdf><b>Anticipatory Resource Allocation for ML Training</b></a><br>
+Tapan Chugh, Srikanth Kandula, Arvind Krishnamurthy, Ratul Mahajan, Ishai Menache<br>
+SoCC, 2023<br>
+<br>
+</table>
 <p><a name=protocols></a>
 
                <b>Network verification and high-level programming</b>
@@ -23,7 +41,7 @@
 <table style="width: 100%;" cellpadding="2" cellspacing="2">
 <tr><td width=10px><td></tr>
 <tr><td><td>
-<a href=papers/sigcomm2023-batfish-lessons.pdf><b>TLessons from the evolution of the Batfish configuration analysis tool</b></a><br>
+<a href=papers/sigcomm2023-batfish-lessons.pdf><b>Lessons from the evolution of the Batfish configuration analysis tool</b></a><br>
 Matt Brown, Ari Fogel, Daniel Halperin, Victor Heohiardi, Ratul Mahajan, Todd Millstein<br>
 SIGCOMM, 2023<br>
 <a href=https://github.com/batfish>Code and documentation</a><br><br>
