Add ADN paper and CNSM talk

--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
 
 <ul>
   <li>
+    <a href=papers/hotnets2023-adn.pdf>Application Defined Networking</a>
+    <br> Xiangfeng Zhu, Weixin Deng, Banruo Liu, Jingrong Chen, Yongji Wu, Tom Anderson, Arvind Krishnamurthy, Ratul Mahajan, and Danyang Zhuo
+    <br>
+    <i>HotNets, 2023</i>
+  </li>
+  <li>
     <a href=papers/socc2023-meshinsight.pdf>Dissecting Overheads of Service Mesh Sidecars</a>
     <br> Xiangfeng Zhu, Guozhen She, Bowen Xue, Yu Zhang, Yongsu Zhang, Xuan Kelvin Zou, XiongChun Duan, Peng He, Arvind Krishnamurthy, Matthew Lentz, Danyang Zhuo, and Ratul Mahajan
     <br>
@@ -87,24 +93,18 @@
 </ul>
 
 <p>
-<b>Select talks</b> [<a href="talks.html">More talks</a>]
+<b>Recent talks</b> [<a href="talks.html">More talks</a>]
 <ul>
 
 <li>
-<a href=talks/cisco-netcov-apr23.pdf>NetCov: Test coverage for network configurations</a>
-<br>
-At Cisco Research, Apr 2023<br>
+  <a href=talks/cnsm2023-keynote.pdf>Network verification: Lessons learned and outlook</a>
+  <br>
+  Keynote at <a href="http://www.cnsm-conf.org/2023/">IEEE CNSM</a>, Nov 2023<br>
 
 <li>
-<a href=talks/future-net-aug2017.pptx>Network Engineers Can Uncross their Fingers by Emulating Hardware and Software Engineers</a> [<a href=https://www.youtube.com/watch?v=LfoCK7Au6to>Watch</a>]
-<br>
-Keynote at <a href=https://www.vmware.com/futurenet>Future:Net</a> 2017<br>
-
-<li>
-<a href=talks/sosr-apr2017.pptx>Network programming for the cloud ERA</a>
-<br>
-Keynote at <a href=http://conferences.sigcomm.org/sosr/2017/>ACM SOSR 2017</a> <br>
-
+  <a href=talks/cisco-netcov-apr23.pdf>NetCov: Test coverage for network configurations</a>
+  <br>
+  At Cisco Research, Apr 2023<br>
 
 </ul>
 
