--- a/talks.html
+++ b/talks.html
@@ -1,25 +1,41 @@
 <ul>
 
 <li>
+    <a href=talks/future-net-aug2017.pptx>Network Engineers Can Uncross their Fingers by Emulating Hardware and Software Engineers</a> [<a href=https://www.youtube.com/watch?v=LfoCK7Au6to>Watch</a>]
+    <br>
+    Keynote at <a href=https://www.vmware.com/futurenet>Future:Net</a> 2017<br>
+</li>
+
+<li>
+    <a href=talks/sosr-apr2017.pptx>Network programming for the cloud ERA</a>
+    <br>
+    Keynote at <a href=http://conferences.sigcomm.org/sosr/2017/>ACM SOSR 2017</a> <br>
+</li>
+
+<li>
 <a href=talks/network-programming-jun2016.pptx>Maslow's hierarchy of network programming and the unmet needs</a>
 <br>
 Keynote at <a href=http://network-programming.org/>Center for Network Programming</a> Retreat, Jun 2016 <br>
+</li>
 
 <li>
 <a href=talks/propane-dimacs-jun2016.pptx>Bridging centralized programming and distributed control planes</a> [<a href=https://www.youtube.com/watch?v=AXrhbM2BWGQ>Watch</a>]
 <br>
 NSF <a href=http://dimacs.rutgers.edu/Workshops/SDNAlgorithms/>Algorithms in the Field Workshop</a>, Jun 2016 <br>
+</li>
 
 
 <li>
 <a href=talks/batfish-dagstuhl-feb2015.pptx>Configuration verification: A missing link toward fully verified networks</a>
 <br>
 Dagstuhl seminar on Formal Foundations of Networking, Feb 2015 <br>
+</li>
 
 <li>
 <a href=talks/swan-stanford-may2014.pptx>Software-defined networking: Change is hard</a> [<a href=https://www.youtube.com/watch?v=YgqHTsd247M>Watch</a>]
 <br>
 Stanford, May 2014
+</li>
 
 <li>
 <a href=talks/swan-ucsd-nov2013.pptx>Software-driven wide area network</a>
