--- a/pubs.html
+++ b/pubs.html
@@ -10,6 +10,11 @@
 <table style="width: 100%;" cellpadding="2" cellspacing="2">
 <tr><td width=10px><td></tr>
 <tr><td><td>
+<a href=papers/hotnets2023-adn.pdf><b>Dissecting Overheads of Service Mesh Sidecars</b></a><br>
+Xiangfeng Zhu, Weixin Deng, Banruo Liu, Jingrong Chen, Yongji Wu, Tom Anderson, Arvind Krishnamurthy, Ratul Mahajan, Danyang Zhu<br>
+HotNets, 2023<br>
+<br>
+<tr><td><td>
 <a href=papers/socc2023-meshinsight.pdf><b>Dissecting Overheads of Service Mesh Sidecars</b></a><br>
 Xiangfeng Zhu, Guozhen She, Bowen Xue, Yu Zhang, Yongsu Zhang, Xuan Kelvin Zou, XiongChun Duan, Peng He, Arvind Krishnamurthy, Matthew Lentz, Danyang Zhuo, Ratul Mahajan<br>
 SoCC, 2023<br>
