--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
 
 <ul>
   <li>
+    <a href=papers/nsdi2024-flm.pdf>Sequence Abstractions for Flexible, Line-Rate Network Monitoring</a>
+    <br> Andrew Johnson, Ryan Beckett, Xiaoqi Chen, Ratul Mahajan, and David Walker
+    <br>
+    <i>NSDI, 2024</i>
+  </li>
+  <li>
     <a href=papers/hotnets2023-adn.pdf>Application Defined Networking</a>
     <br> Xiangfeng Zhu, Weixin Deng, Banruo Liu, Jingrong Chen, Yongji Wu, Tom Anderson, Arvind Krishnamurthy, Ratul Mahajan, and Danyang Zhuo
     <br>
