--- a/pubs-bytopic.html
+++ b/pubs-bytopic.html
@@ -46,6 +46,11 @@ SoCC, 2023<br>
 <table style="width: 100%;" cellpadding="2" cellspacing="2">
 <tr><td width=10px><td></tr>
 <tr><td><td>
+<a href=papers/nsdi2024-flm.pdf><b>Sequence Abstractions for Flexible, Line-Rate Network Monitoring</b></a><br>
+Andrew Johnson, Ryan Beckett, Xiaoqi Chen, Ratul Mahajan, David Walker<br>
+NSDI, 2024<br>
+<a href=https://github.com/PrincetonUniversity/lucid/tree/SpecRegex>Code</a><br><br>
+<tr><td><td>
 <a href=papers/sigcomm2023-batfish-lessons.pdf><b>Lessons from the evolution of the Batfish configuration analysis tool</b></a><br>
 Matt Brown, Ari Fogel, Daniel Halperin, Victor Heohiardi, Ratul Mahajan, Todd Millstein<br>
 SIGCOMM, 2023<br>
