--- a/pubs.html
+++ b/pubs.html
@@ -5,6 +5,16 @@
 </head>
 <body bgcolor="#ffffff">
 </table>
+<p><b>2024</b>
+
+<table style="width: 100%;" cellpadding="2" cellspacing="2">
+<tr><td width=10px><td></tr>
+<tr><td><td>
+<a href=papers/nsdi2024-flm.pdf><b>Sequence Abstractions for Flexible, Line-Rate Network Monitoring</b></a><br>
+Andrew Johnson, Ryan Beckett, Xiaoqi Chen, Ratul Mahajan, David Walker<br>
+NSDI, 2024<br>
+<a href=https://github.com/PrincetonUniversity/lucid/tree/SpecRegex>Code</a><br><br>
+</table>
 <p><b>2023</b>
 
 <table style="width: 100%;" cellpadding="2" cellspacing="2">
