--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
       <li>
         <a href=talks/acm-fsn2023-adn.pdf>Application-defined networking</a>
         <br>
-        At <a href="https://www.iiitd.ac.in/fsn/">ACM India Winter School on Full Stack Networking</a>, Dec 2023<br>
+        Invited talk at <a href="https://www.iiitd.ac.in/fsn/">ACM India Winter School on Full Stack Networking</a>, Dec
+        2023<br>
 
       <li>
         <a href=talks/cnsm2023-keynote.pdf>Network verification: Lessons learned and outlook</a>
@@ -119,7 +120,7 @@
       <li>
         <a href=talks/cisco-netcov-apr23.pdf>NetCov: Test coverage for network configurations</a>
         <br>
-        At Cisco Research, Apr 2023<br>
+        Invited talk at Cisco Research, Apr 2023<br>
 
     </ul>
 
