Remove intentionet URL

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
       Ratul Mahajan is an Associate Professor at the <a href=https://www.cs.washington.edu />University of
       Washington</a> (Paul G. Allen School of Computer Science). He is also the co-director of <a
         href=https://foci.uw.edu>UW FOCI</a> (Future of Cloud Infrastructure) and an Amazon Scholar. Prior to that, he
-      was a Co-founder and CEO of <a href=http://www.intentionet.com>Intentionet</a>, a company that pioneered
+      was a Co-founder and CEO of Intentionet, a company that pioneered
       intent-based networking and network verification, and a Principal Researcher at <a
         href=https://www.microsoft.com/en-us/research />Microsoft Research</a>. He got his PhD at the <a
         href=https://www.cs.washington.edu />University of Washington</a> and B.Tech at <a
