--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@
 
     <ul>
       <li>
+        <a href=papers/sigcomm2024-rela.pdf>Relational Network Verification</a>
+        <br> Xieyang Xu, Yifei Yuan, Zachary Kincaid, Arvind Krishnamurthy, Ratul Mahajan, David Walker and Ennan Zhai
+        <br>
+        <i>SIGCOMM, 2024</i>
+      </li>
+      <li>
         <a href=papers/nsdi2024-flm.pdf>Sequence Abstractions for Flexible, Line-Rate Network Monitoring</a>
         <br> Andrew Johnson, Ryan Beckett, Xiaoqi Chen, Ratul Mahajan, and David Walker
         <br>
