--- a/pubs-bytopic.html
+++ b/pubs-bytopic.html
@@ -46,6 +46,11 @@ SoCC, 2023<br>
 <table style="width: 100%;" cellpadding="2" cellspacing="2">
 <tr><td width=10px><td></tr>
 <tr><td><td>
+<a href=papers/sigcomm2024-rela.pdf><b>Relational Network Verification</b></a><br>
+Xieyang Xu, Yifei Yuan, Zachary Kincaid, Arvind Krishnamurthy, Ratul Mahajan, David Walker, Ennan Zhai<br>
+SIGCOMM, 2024<br>
+<a href=https://github.com/alibaba/rela>Code</a><br><br>
+<tr><td><td>
 <a href=papers/nsdi2024-flm.pdf><b>Sequence Abstractions for Flexible, Line-Rate Network Monitoring</b></a><br>
 Andrew Johnson, Ryan Beckett, Xiaoqi Chen, Ratul Mahajan, David Walker<br>
 NSDI, 2024<br>
