Add sigcomm talks

--- a/index.html
+++ b/index.html
@@ -113,10 +113,25 @@
     <ul>
 
       <li>
+        <a href=talks/fmano2024-keynote.pdf>The bane of network operations: Networks are evolved, not (intelligently) designed</a>
+        <br>
+        Keynote at <a href="https://conferences.sigcomm.org/sigcomm/2024/workshop/fmano/">1st ACM SIGCOMM Workshop on Formal Methods Aided Network Operation (FMANO)</a>, Aug
+        2024<br>
+      </li>
+
+      <li>
+        <a href=talks/apnet2024-keynote.pdf>A decade of network verification: Lessons learned and open challenges</a>
+        <br>
+        Keynote at <a href="https://conferences.sigcomm.org/events/apnet2024/">8th Asia-Pacific Workshop on Networking (APNet'24)</a>, Aug
+        2024<br>
+      </li>
+
+      <li>
         <a href=talks/acm-fsn2023-adn.pdf>Application-defined networking</a>
         <br>
         Invited talk at <a href="https://www.iiitd.ac.in/fsn/">ACM India Winter School on Full Stack Networking</a>, Dec
         2023<br>
+      </li>
 
       <li>
         <a href=talks/cnsm2023-keynote.pdf>Network verification: Lessons learned and outlook</a>
@@ -145,6 +160,9 @@
       <li>
         <b>PC member:</b>
         <ul>
+          <li> 2025:
+            <a href=https://www.usenix.org/conference/osdi25>OSDI</a>,
+          </li>
           <li> 2024:
             <a href="https://conferences.sigcomm.org/sigcomm/2024/">SIGCOMM</a>
           </li>
